rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row1_unknown_ascii_tilde.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"~\")"
---
source: "~"
lex:   Ok (1 tokens)
parse: Err [lexical] "found unknown token '~'" @ [SourceRange([0, 1, 0])]
