rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row1_unknown_ascii_tilde_in_context.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"12 ~ 8\")"
---
source: "12 ~ 8"
lex:   Ok (5 tokens)
parse: Err [lexical] "found unknown token '~'" @ [SourceRange([3, 4, 0])]
