rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row1_unknown_ascii_tilde_new.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_new(\"~\")"
---
source: "~"
tokens: 1
issues: 1
final:  Err [lexical] "found unknown token '~'" @ [SourceRange([0, 1, 0])]
