rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row2_unterminated_string.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"\\\"abc\")"
---
source: "\"abc"
lex:   Err [lexical] "found unknown token '\"'" @ [SourceRange([0, 1, 0])]
parse: Err [lexical] "found unknown token '\"'" @ [SourceRange([0, 1, 0])]
