rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row2_unterminated_string_new.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_new(\"\\\"abc\")"
---
source: "\"abc"
tokens: 1
issues: 1
final:  Err [lexical] "unterminated string literal" @ [SourceRange([0, 4, 0])]
