rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row3_lone_double_quote.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"\\\"\")"
---
source: "\""
lex:   Err [lexical] "found unknown token '\"'" @ [SourceRange([0, 1, 0])]
parse: Err [lexical] "found unknown token '\"'" @ [SourceRange([0, 1, 0])]
