rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row3_lone_double_quote_new.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_new(\"\\\"\")"
---
source: "\""
tokens: 1
issues: 1
final:  Err [lexical] "unterminated string literal" @ [SourceRange([0, 1, 0])]
