rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row4_unterminated_block_comment.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"/* abc\")"
---
source: "/* abc"
lex:   Ok (4 tokens)
parse: Ok (program: false, issues: ["Fatal \"Unexpected token: /\" @ SourceRange([0, 1, 0])"])
