rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row4_unterminated_block_comment_new.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_new(\"/* abc\")"
---
source: "/* abc"
tokens: 1
issues: 1
final:  Err [lexical] "unterminated block comment" @ [SourceRange([0, 6, 0])]
