rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row5_non_ascii_whitespace_nbsp.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_old(\"a\\u{00A0}b\")"
---
source: "a\u{a0}b"
lex:   Err [lexical] "found unknown token '\u{a0}'" @ [SourceRange([1, 2, 0])]
parse: Err [lexical] "found unknown token '\u{a0}'" @ [SourceRange([1, 2, 0])]
