rust/kcl-lib/src/parsing/token/snapshots/kcl_lib__parsing__token__error_matrix_tests__row5_non_ascii_whitespace_nbsp_new.snap
---
source: kcl-lib/src/parsing/token/error_matrix_tests.rs
expression: "characterize_new(\"a\\u{00A0}b\")"
---
source: "a\u{a0}b"
tokens: 3
issues: 1
final:  Err [lexical] "found unknown token '\u{a0}'" @ [SourceRange([1, 3, 0])]
